# vuanem-ecommerce-service

./: .dockerignore  .gcloudignore  .gitignore  .markdownlint.yaml  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
auth/: AccessTokenRepo.py
common/: firestore.py  seller.py  utils.py
controller/: callback.py  chatbot.py  shopee.py  tiki.py
db/: bigquery.py  firestore.py  migrate.py
docs/: pre-v4.md  technical.md
firestore/: FirestoreRepo.py
lazada/: auth_repo.py  data_repo.py  lazada.py  lazada_controller.py  lazada_repo.py  lazada_service.py  order_repo.py  seller.py
libs/: firestore.py  netsuite.py  restlet.py  shopee.py  telegram.py  tiki.py  utils.py
mail/: sendgrid_repo.py  template_repo.py
models/: customer.py  ecommerce.py  order.py  telegram.py  utils.py
models/ecommerce/: ecommerce.py  shopee.py  tiki.py
models/netsuite/: customer.py  ecommerce.py  order.py  restlet.py
netsuite/: NetSuite.py  NetSuitePrepareRepo.py  NetSuiteRepo.py  NetSuiteRepo2.py  Restlet.py  RestletRepo.py  analytics_repo.py  analytics_service.py  netsuite.py  netsuite_controller.py  netsuite_repo.py  netsuite_service.py  prepare_repo.py  restlet.py  restlet_repo.py  saved_search_repo.py  saved_search_service.py
netsuite/analytics/: analytics_controller.py  analytics_repo.py  analytics_service.py  saved_search_service.py
netsuite/csv_import/: csv_import.py  csv_import_controller.py  csv_import_repo.py  csv_import_service.py
netsuite/customer/: customer.py  customer_repo.py
netsuite/item/: item.py  item_repo.py
netsuite/journal_entry/: bank_in_transit.html  bank_in_transit_service.py  journal_entry.py  journal_entry_controller.py  journal_entry_repo.py  journal_entry_service.py
netsuite/location/: location.py
netsuite/order/: netsuite_service.py  order.py  order_controller.py  order_repo.py  order_service.py  sales_order_service copy.py
netsuite/query/: query.py  query_controller.py  query_repo.py  query_service.py
netsuite/restlet/: restlet.py  restlet_repo.py
netsuite/sales_order/: sales_order.py  sales_order_repo.py  sales_order_service.py
restlet/: Restlet.py  RestletRepo.py
scripts/: test_server.sh
shopee/: auth_repo.py  data_repo.py  order_repo.py  seller.py  shopee.py  shopee_controller.py  shopee_repo.py  shopee_service.py
telegram/: PayloadRepo.py  Telegram.py  TelegramRepo copy.py  TelegramRepo.py  TelegramService.py  callback_controller.py  callback_repo.py  callback_service.py  message_service.py  payload_repo.py  telegram.py  telegram_repo.py  telegram_service.py
test/: conftest.py  s.py  shopee.py  test_callback.py  test_firestore.py  test_lazada.py  test_netsuite.py  test_shopee.py  test_telegram.py  test_tiki.py  test_units.py  utils.py
tiki/: Tiki.py  TikiAuthRepo.py  TikiController copy.py  TikiController.py  TikiDataRepo.py  TikiRepo.py  TikiService.py  auth_repo.py  data_repo.py  event_repo.py  order_repo.py  seller.py  tiki.py  tiki_controller.py  tiki_repo.py  tiki_service.py
vnpay/: vnpay_repo.py  vnpay_service.py
(+8 files in other folders)
