[tool.poetry]
name = "vuanem-ecommerce-service"
version = "5.0.1"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.26.0"
firebase-admin = "^5.1.0"
PyYAML = "^6.0"
oauthlib = "^3.1.1"
requests-oauthlib = "^1.3.0"
typing-extensions = "^3.8"
pytz = "^2021.3"
returns = "^0.17.0"
Authlib = "^0.15.5"
Flask = "^2.0.2"
python-dateutil = "^2.8.2"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
mypy = "^0.910"
types-requests = "^2.26.1"
types-PyYAML = "^6.0.1"
functions-framework = "^3.0.0"
types-pytz = "^2021.3.2"
ipykernel = "^6.6.0"
types-python-dateutil = "^2.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-s --durations=0"
# timeout = 530
testpaths = [
    "test",
]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
plugins = ["returns.contrib.mypy.returns_plugin"]
