[tool.poetry]
name = "vuanem-ecommerce-service"
version = "6.4.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.27.1"
PyYAML = "^6.0"
oauthlib = "^3.1.1"
requests-oauthlib = "^1.3.0"
pytz = "^2021.3"
returns = "^0.19.0"
Authlib = "^0.15.5"
Flask = "^2.1.2"
python-dateutil = "^2.8.2"
google-cloud-bigquery = "^3.1.0"
google-cloud-firestore = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.5"
mypy = "^0.960"
types-requests = "^2.26.1"
types-PyYAML = "^6.0.1"
functions-framework = "^3.0.0"
types-pytz = "^2021.3.2"
ipykernel = "^6.6.0"
types-python-dateutil = "^2.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-s --durations=0"
# timeout = 530
testpaths = [
    "test",
]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true

# plugins = ["returns.contrib.mypy.returns_plugin"]
